# minify-js

./: .gitattributes  .gitignore  Cargo.toml  README.md  format  version
.github/workflows/: bench.yaml  cli.yaml  nodejs.yaml
bench/: build  graph  run
bench/_input/: vue.js
bench/esbuild/: .gitignore  build  go.mod  main.go
bench/minify-js/: .gitignore  Cargo.toml  build
bench/minify-js/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
nodejs/: Cargo.toml  index.d.ts  package.json  postinstall.js
nodejs/src/: lib.rs
notes/: Lexical lifetimes.md  Name minification.md  Parentheses.md  Textual compression.md
rust/: Cargo.toml
rust/src/: ast.rs  char.rs  error.rs  lib.rs  operator.rs  source.rs  symbol.rs  token.rs  update.rs
rust/src/emit/: mod.rs
rust/src/emit/tests/: mod.rs
rust/src/lex/: mod.rs
rust/src/minify/: advanced_if.rs  ctx.rs  lexical_lifetimes.rs  mod.rs  name.rs  pass1.rs  pass2.rs  pass3.rs
rust/src/minify/function/: backedge.rs  bblock.rs  cfg.rs  consteval.rs  counter.rs  deconstruct_ssa.rs  defs.rs  domfront.rs  dominators.rs  domtree.rs  dot.rs  inst.rs  interference.rs  liveness.rs  mod.rs  optpass_cfg_prune.rs  optpass_dvn.rs  optpass_impossible_branches.rs  optpass_redundant_assigns.rs  optpass_trivial_dce.rs  postorder.rs  reconstruct_source.rs  register_alloc.rs  single_use_insts.rs  source_to_inst.rs  ssi_insert_phis.rs  ssi_rename.rs  visit.rs
rust/src/minify/function/builtin/: builtin.TypedArray.js  builtin.js  mod.rs
rust/src/parse/: class_or_object.rs  decl.rs  expr.rs  literal.rs  mod.rs  operator.rs  parser.rs  pattern.rs  signature.rs  stmt.rs  toplevel.rs
rust/src/parse/tests/: mod.rs
rust/src/parse/tests/decl/: mod.rs
rust/src/parse/tests/expr/: call.rs  comma.rs  conditional.rs  literal_regex.rs  mod.rs
rust/src/parse/tests/expr/arrow_function/: nested_ternaries_and_arrows.js  nested_ternaries_and_arrows.json  nested_ternaries_and_assignments.js  nested_ternaries_and_assignments.json  simple.js  simple.json
rust/src/parse/tests/expr/call/: simple.js  simple.json
rust/src/parse/tests/expr/comma/: logical.js  logical.json  simple.js  simple.json
rust/src/parse/tests/expr/conditional/: simple.json
rust/src/parse/tests/expr/grouping/: comma.js  comma.json  comma_and_conditionals.js  comma_and_conditionals.json  nested.js  nested.json
rust/src/parse/tests/expr/identifier/: simple.json
rust/src/parse/tests/expr/literal_regex/: division_operator.js  division_operator.json
rust/src/parse/tests/expr/new/: simple.js  simple.json  with_operators.js  with_operators.json  without_args.js  without_args.json
rust/src/parse/tests/expr/unary/: complex.js  complex.json
rust/src/parse/tests/stmt/: mod.rs
rust/src/parse/tests/stmt/var/: simple.js  simple.json
rust/src/serialise/: mod.rs
rust/src/util/: test.rs
src/: ast.rs  char.rs  error.rs  lib.rs  main.rs  num.rs  operator.rs  source.rs  symbol.rs  token.rs
src/lex/: mod.rs
src/lex/tests/: mod.rs
src/parse/: decl.rs  expr.rs  literal.rs  mod.rs  parser.rs  pattern.rs  stmt.rs
src/parse/tests/decl/: var.rs
src/parse/tests/expr/: arrow_function.rs  grouping.rs  identifier.rs  mod.rs  new.rs  unary.rs
src/util/: test.rs
vend/: parse-js
